; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-ipc.c_write_until_data_queued.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-ipc.c_write_until_data_queued.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@write_reqs = common dso_local global i32* null, align 8
@channel = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@large_buf = common dso_local global i32 0, align 4
@closed_handle_large_write_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @write_until_data_queued to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_until_data_queued() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %24, %0
  %4 = load i32*, i32** @write_reqs, align 8
  %5 = load i32, i32* %1, align 4
  %6 = zext i32 %5 to i64
  %7 = getelementptr inbounds i32, i32* %4, i64 %6
  %8 = load i32, i32* @closed_handle_large_write_cb, align 4
  %9 = call i32 @uv_write(i32* %7, i32* bitcast (%struct.TYPE_2__* @channel to i32*), i32* @large_buf, i32 1, i32 %8)
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = icmp eq i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32, i32* %1, align 4
  %15 = add i32 %14, 1
  store i32 %15, i32* %1, align 4
  br label %16

16:                                               ; preds = %3
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @channel, i32 0, i32 0), align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i32, i32* %1, align 4
  %21 = load i32*, i32** @write_reqs, align 8
  %22 = call i32 @ARRAY_SIZE(i32* %21)
  %23 = icmp ult i32 %20, %22
  br label %24

24:                                               ; preds = %19, %16
  %25 = phi i1 [ false, %16 ], [ %23, %19 ]
  br i1 %25, label %3, label %26

26:                                               ; preds = %24
  %27 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @channel, i32 0, i32 0), align 8
  %28 = trunc i64 %27 to i32
  ret i32 %28
}

declare dso_local i32 @uv_write(i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
